[iOS] Using CSS viewport units causes incorrect layout. https://bugs.webkit.org/show_bug.cgi?id=145225 rdar://problem/20924495

Reviewed by Benjamin Poulain.

Source/WebCore:

* page/ViewportConfiguration.cpp:
(WebCore::ViewportConfiguration::initialScaleFromSize):
(WebCore::ViewportConfiguration::initialScale):
(WebCore::ViewportConfiguration::initialScaleIgnoringContentSize):
* page/ViewportConfiguration.h:
(WebCore::ViewportConfiguration::initialScaleFromSize):
(WebCore::ViewportConfiguration::initialScaleIgnoringContentSize):

Source/WebKit2:

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::updateViewportSizeForCSSViewportUnits):



Canonical link: https://commits.webkit.org/163252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184681 268f45cc-cd09-0410-ab3c-d52691b4dbfc